--- a/css/tooplate-infinite-loop.css
+++ b/css/tooplate-infinite-loop.css
@@ -665,4 +665,22 @@ p {
     .flag-select.open .flag-options {
       display: block;
     }
-    
+    .map-container {
+  position: relative;
+  width: 100%;
+  max-width: 400px;        /* ako želiš da nikad ne bude prevelika */
+  padding-bottom: 62%;    /* visina mape */
+  margin: 5mm;
+  border: 3px solid black;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.map-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
